--- a/style/main_style.css
+++ b/style/main_style.css
@@ -14,8 +14,14 @@ a {
     text-decoration: none;
     text-align: center;
     color: #eebbc3;
+    transition: .2s;
 }
 
+a:hover {
+    color: #ff7e91;
+    display: inline-block;
+    transform: scale(1.05);
+}
 
 h3 {
     font-size: 17px;
@@ -23,16 +29,21 @@ h3 {
     font-weight: bold;
 }
 
+
 /*  */
+
 .middle__title {
     font-size: 60px;
     color: #fcfcfc;
     text-align: center;
 }
 
+
 /*  */
 
+
 /* Top */
+
 .top__main {
     background: #232946;
     width: 100%;
@@ -49,9 +60,12 @@ h3 {
     align-items: center;
 }
 
+
 /*  */
 
+
 /* About */
+
 .about__main {
     padding-bottom: 20px;
     height: auto;
@@ -67,8 +81,7 @@ h3 {
 }
 
 .about__coding {
-    box-shadow: inset 5px 5px 10px #181818,
-        inset -5px -5px 10px #242424;
+    box-shadow: inset 5px 5px 10px #181818, inset -5px -5px 10px #242424;
     padding: 20px;
     border-radius: 10px;
     margin: 20px auto;
@@ -85,9 +98,12 @@ h3 {
     padding-left: 35px;
 }
 
+
 /*  */
 
+
 /* skills */
+
 .skills__main {
     height: 100vh;
     display: flex;
@@ -130,6 +146,7 @@ h3 {
     color: #232946;
 }
 
+
 /* swiper */
 
 .swiper {
@@ -145,7 +162,7 @@ h3 {
     /* wrapperのサイズを調整 */
     border-radius: 10px;
     width: 100%;
-    height: 465px !important;
+    height: 405px !important;
 }
 
 .swiper-slide {
@@ -175,4 +192,101 @@ h3 {
 
 
 /* swipe */
+
+
+/* contact */
+
+.contact__main {
+    height: 100vh;
+    background-color: #b8c1ec;
+}
+
+form {
+    text-align: center;
+    max-width: 600px;
+    width: 85%;
+    margin: 0 auto;
+}
+
+.contact__title {
+    padding: 20px 0 20px 0;
+    color: #232946;
+    font-size: 40px;
+    text-align: center;
+}
+
+.form__title {
+    text-align: left;
+    padding: 0 0 10px;
+    font-size: 20px;
+    color: #232946;
+}
+
+input {
+    padding: 0 0 0 10px;
+    font-size: 17px;
+    width: 100%;
+    background-color: #fffffe;
+    border: 1px solid #232946;
+    border-left: 5px solid #232946;
+    border-radius: 0 10px 10px 0;
+    outline: none;
+    height: 30px;
+    margin: 0 0 20px 0;
+}
+
+textarea {
+    resize: none;
+    padding: 5px;
+    font-size: 17px;
+    width: 100%;
+    background-color: #fffffe;
+    border: 1px solid #232946;
+    border-radius: 10px;
+    outline: none;
+    height: 400px;
+    margin: 0 0 20px 0;
+}
+
+button {
+    font-family: 'Noto Sans JP', sans-serif;
+    transition: .2s;
+    color: #b8c1ec;
+    height: 30px;
+    width: 150px;
+    border-radius: 10px;
+    font-size: 17px;
+    background-color: #232946;
+    border: 1px solid;
+}
+
+button:hover {
+    transform: scale(1.1);
+}
+
+
+/*  */
+
+
+/* bottom */
+
+.bottom__main {
+    padding: 50px 0 0 0;
+    width: 100%;
+    height: 40vh;
+    background-color: #232946;
+    display: flex;
+    justify-content: center;
+}
+
+.bottom__contents {
+    width: 20%;
+    color: #b8c1ec;
+}
+
+.bottom__subtitle {
+    text-align: center;
+}
+
+
 /*  */
