--- a/style/main_style.css
+++ b/style/main_style.css
@@ -38,12 +38,9 @@ h3 {
     text-align: center;
 }
 
-
 /*  */
 
-
 /* Top */
-
 .top__main {
     background: #232946;
     width: 100%;
@@ -53,11 +50,25 @@ h3 {
 .top__title {
     font-size: 60px;
     font-family: 'Noto Sans JP', sans-serif;
-    color: #fcfcfc;
     line-height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
+
+    background: linear-gradient(to right, #F7C8E0, #95BDFF);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    animation: gradient 10s ease infinite;
+}
+
+@keyframes gradient {
+    0% {
+        background-position: 0% 50%;
+    }
+
+    100% {
+        background-position: 100% 50%;
+    }
 }
 
 
@@ -105,7 +116,8 @@ h3 {
 /* skills */
 
 .skills__main {
-    height: 100vh;
+    padding: 120px 0;
+    height: fit-content;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -197,7 +209,8 @@ h3 {
 /* contact */
 
 .contact__main {
-    height: 100vh;
+    height: fit-content;
+    padding: 0 0 40px 0;
     background-color: #b8c1ec;
 }
 
@@ -223,6 +236,7 @@ form {
 }
 
 input {
+    font-family: Arial, sans-serif;
     padding: 0 0 0 10px;
     font-size: 17px;
     width: 100%;
@@ -236,6 +250,7 @@ input {
 }
 
 textarea {
+    font-family: Arial, sans-serif;
     resize: none;
     padding: 5px;
     font-size: 17px;
@@ -244,15 +259,17 @@ textarea {
     border: 1px solid #232946;
     border-radius: 10px;
     outline: none;
-    height: 400px;
+    height: 350px;
     margin: 0 0 20px 0;
 }
 
-button {
+.button {
+    margin: 0 auto;
+    padding: 5px;
     font-family: 'Noto Sans JP', sans-serif;
     transition: .2s;
     color: #b8c1ec;
-    height: 30px;
+    height: fit-content;
     width: 150px;
     border-radius: 10px;
     font-size: 17px;
@@ -260,7 +277,8 @@ button {
     border: 1px solid;
 }
 
-button:hover {
+.button:hover {
+    cursor: pointer;
     transform: scale(1.1);
 }
 
@@ -271,22 +289,46 @@ button:hover {
 /* bottom */
 
 .bottom__main {
-    padding: 50px 0 0 0;
+    padding: 50px 0 30px 0;
     width: 100%;
-    height: 40vh;
+    height: fit-content;
     background-color: #232946;
     display: flex;
     justify-content: center;
 }
 
 .bottom__contents {
-    width: 20%;
+    margin: 0 10%;
+    width: 10%;
     color: #b8c1ec;
 }
 
 .bottom__subtitle {
-    text-align: center;
+    font-size: 20px;
+    padding: 0 0 10px 0;
+    text-align: left;
 }
 
+.bottom__links {
+    transition: .5s;
+    text-align: left;
+    color: #b8c1ec;
+    font-size: 20px;
+    display: block;
+}
+
+.bottom__links:hover {
+    display: block;
+    transform: scale(1) rotateX(360deg);
+}
+
+.bottom__produced {
+    color: #b8c1ec;
+    font-size: 17px;
+    text-align: center;
+    height: auto;
+    width: 100%;
+    background-color: #232946;
+}
 
 /*  */
