--- a/style/main_style.css
+++ b/style/main_style.css
@@ -55,19 +55,21 @@ h3 {
     justify-content: center;
     align-items: center;
 
-    background: linear-gradient(to right, #F7C8E0, #95BDFF);
+    background: linear-gradient(45deg, #FA8BFF 16%, #2BD2FF 57%, #2BFF88 90%);
+    background: -webkit-linear-gradient(45deg, #FA8BFF 16%, #2BD2FF 57%, #2BFF88 90%);
+    background-size: 300% auto;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
-    animation: gradient 10s ease infinite;
+    animation: gradientEffect 2.5s infinite alternate;
 }
 
-@keyframes gradient {
-    0% {
-        background-position: 0% 50%;
+@keyframes gradientEffect {
+    from {
+        background-position: left
     }
 
-    100% {
-        background-position: 100% 50%;
+    to {
+        background-position: right
     }
 }
 
@@ -206,6 +208,7 @@ h3 {
 /* swipe */
 
 
+
 /* contact */
 
 .contact__main {
@@ -298,7 +301,7 @@ textarea {
 }
 
 .bottom__contents {
-    margin: 0 10%;
+    margin: 0 3%;
     width: 10%;
     color: #b8c1ec;
 }
@@ -323,6 +326,7 @@ textarea {
 }
 
 .bottom__produced {
+    padding: 0 0 10px 0;
     color: #b8c1ec;
     font-size: 17px;
     text-align: center;
@@ -332,3 +336,53 @@ textarea {
 }
 
 /*  */
+
+
+/* responsive */
+@media screen and (max-width:500px) {
+    .about__coding__child {
+        padding: 0 0 0 15px;
+    }
+
+    .skills__main {
+        display: block;
+        padding: 30px 0;
+    }
+
+    .skills__contents {
+        width: auto;
+        height: fit-content;
+        padding-bottom: 20px;
+    }
+
+    .bottom__main {
+        display: block;
+    }
+
+    .bottom__contents {
+        padding: 0 0 20px 0;
+        width: 80%;
+        margin: 0 auto;
+    }
+
+    .bottom__subtitle {
+        font-size: 25px;
+    }
+
+    .bottom__links {
+        font-size: 22px;
+    }
+}
+
+@media screen and (max-width:870px) {
+    .swiper-wrapper {
+        height: 450px !important;
+    }
+}
+
+@media screen and (max-width:1200px) {
+    .bottom__contents {
+        padding: 0 0 20px 0;
+        width: 80%;
+    }
+}
