--- a/style/main_style.css
+++ b/style/main_style.css
@@ -378,6 +378,11 @@ textarea {
     .swiper-wrapper {
         height: 450px !important;
     }
+
+    [data-aos] {
+        opacity: 1 !important;
+        transform: none !important;
+    }
 }
 
 @media screen and (max-width:1200px) {
