--- a/style/main_style.css
+++ b/style/main_style.css
@@ -55,13 +55,14 @@ h3 {
     display: flex;
     justify-content: center;
     align-items: center;
-
+    color: #FFFFFF;
+/* 
     background: linear-gradient(45deg, #FA8BFF 16%, #2BD2FF 57%, #2BFF88 90%);
     background: -webkit-linear-gradient(45deg, #FA8BFF 16%, #2BD2FF 57%, #2BFF88 90%);
     background-size: 300% auto;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
-    animation: gradientEffect 2.5s infinite alternate;
+    animation: gradientEffect 2.5s infinite alternate; */
 }
 
 @keyframes gradientEffect {
